--- a/index.html
+++ b/index.html
@@ -256,6 +256,15 @@
         <li><a href="#about" tabindex="0">Sobre</a></li>
         <li><a href="#contact" tabindex="0">Contato</a></li>
       </ul>
+                <div id="acessibilidade" class="menu-acessibilidade">
+                <button id="botao-acessibilidade" class="btn btn-primary fw-bold rotacao-botao">acessibilidade</button>
+                <div id="opcoes-acessibilidade" class="opcoes-acessibilidade apresenta-lista">
+                    <button id="aumentar-fonte" class="btn btn-primary fw-bold">A+</button>
+                    <button id="diminuir-fonte" class="btn btn-primary fw-bold">A-</button>
+                    <button id="alterna-contraste" class="btn btn-primary fw-bold"> <i
+                            class="bi bi-shadows"></i></button>
+                </div>
+            </div>
     </nav>
   </header>
 
