--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     transition: background-color 0.3s, color 0.3s; /* Transição suave para alto contraste */
   }
 
-  /* Estilo para reduzir animações */
+  /* Estilo para reduzir animações (mantido caso queira reativar no futuro, mas não usado no menu) */
   body.reduce-motion * {
     transition: none !important;
     animation: none !important;
@@ -261,55 +261,58 @@
     transition: background-color 0.3s, color 0.3s, border-color 0.3s;
   }
 
+  /* Botão de Acessibilidade Flutuante */
+  .accessibility-toggle-button {
+    position: fixed;
+    top: 2rem; /* Ajuste a posição conforme necessário */
+    right: 20px;
+    z-index: 1001; /* Acima do menu de acessibilidade */
+    background-color: var(--clr-accent);
+    color: white;
+    border: none;
+    border-radius: 50%; /* Botão redondo */
+    width: 50px; /* Tamanho do botão */
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.8rem; /* Tamanho do ícone */
+    cursor: pointer;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s, transform 0.3s;
+  }
+
+  .accessibility-toggle-button:hover {
+    background-color: #333333;
+    transform: scale(1.05);
+  }
+
   /* Estilos para o Menu de Acessibilidade */
   .menu-acessibilidade {
     position: fixed;
-    top: 2rem;
+    top: calc(2rem + 60px); /* Abaixo do botão de toggle, 60px = altura do botão + margem */
     right: 20px;
     z-index: 1000;
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     padding: 10px;
-    transition: background-color 0.3s, box-shadow 0.3s;
+    transition: background-color 0.3s, box-shadow 0.3s, opacity 0.3s, transform 0.3s;
+    opacity: 0; /* Escondido por padrão */
+    transform: translateY(-10px); /* Levemente acima para animação de entrada */
+    pointer-events: none; /* Não interage quando escondido */
   }
 
-  .rotacao-botao {
-    transform: rotate(-90deg);
-    transform-origin: right center;
-    background-color: var(--clr-accent); /* Usando a cor de destaque do tema */
-    color: white;
-    border: none;
-    padding: 12px 18px;
-    cursor: pointer;
-    font-size: 1.1rem; /* Tamanho fixo para o botão do menu */
-    border-radius: 5px;
-    transition: background-color 0.3s;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .rotacao-botao:hover {
-    background-color: #333333; /* Tom mais escuro da cor de destaque */
+  .menu-acessibilidade.show {
+    opacity: 1;
+    transform: translateY(0);
+    pointer-events: auto; /* Interage quando visível */
   }
 
   .opcoes-acessibilidade {
-    margin-top: 10px;
     display: flex;
     flex-direction: column;
     gap: 5px;
-    /* Transição para a abertura/fechamento do menu */
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.5s ease-out, opacity 0.5s ease-out;
-    opacity: 0;
-  }
-
-  .opcoes-acessibilidade.apresenta-lista {
-    max-height: 300px; /* Valor suficiente para mostrar todas as opções */
-    opacity: 1;
   }
 
   .opcoes-acessibilidade button {
@@ -399,13 +402,11 @@
     box-shadow: 0 4px 15px rgba(255, 255, 255, 0.3);
   }
 
-  body.alto-contraste .rotacao-botao,
   body.alto-contraste .opcoes-acessibilidade button {
     background-color: var(--alto-contraste-accent);
     color: var(--alto-contraste-bg);
   }
 
-  body.alto-contraste .rotacao-botao:hover,
   body.alto-contraste .opcoes-acessibilidade button:hover {
     background-color: #CCCC00;
   }
@@ -413,14 +414,24 @@
   body.alto-contraste footer {
     border-top-color: var(--alto-contraste-border);
   }
+
+  body.alto-contraste .accessibility-toggle-button {
+    background-color: var(--alto-contraste-accent);
+    color: var(--alto-contraste-bg);
+  }
+  body.alto-contraste .accessibility-toggle-button:hover {
+    background-color: #CCCC00;
+  }
 </style>
 </head>
 <body>
+  <!-- Botão de Acessibilidade Flutuante -->
+  <button class="accessibility-toggle-button" onclick="toggleAccessibilityMenu()" aria-label="Abrir menu de acessibilidade">
+      🧑‍🧒‍🧒
+  </button>
+
   <!-- Menu de Acessibilidade -->
-  <div class="menu-acessibilidade">
-      <button class="rotacao-botao" onclick="toggleMenu()">
-          <span class="icon">⚙️</span> Acessibilidade
-      </button>
+  <div class="menu-acessibilidade" id="accessibilityMenu">
       <div class="opcoes-acessibilidade">
           <button onclick="aumentarFonte()">
               <span class="icon">🔍</span> Aumentar Fonte
@@ -430,9 +441,6 @@
           </button>
           <button onclick="alterarContraste()">
               <span class="icon">🌙</span> Ativar Alto Contraste
-          </button>
-          <button onclick="toggleReduceMotion()">
-              <span class="icon">🚫</span> Reduzir Animações
           </button>
       </div>
   </div>
@@ -587,22 +595,16 @@
         localStorage.setItem('highContrast', isHighContrast);
     }
 
-    function toggleReduceMotion() {
-        document.body.classList.toggle('reduce-motion');
-        const isReducedMotion = document.body.classList.contains('reduce-motion');
-        localStorage.setItem('reduceMotion', isReducedMotion);
-    }
-
-    function toggleMenu() {
-        const opcoes = document.querySelector('.opcoes-acessibilidade');
-        opcoes.classList.toggle('apresenta-lista');
+    // Função para alternar a visibilidade do menu de acessibilidade
+    function toggleAccessibilityMenu() {
+        const menu = document.getElementById('accessibilityMenu');
+        menu.classList.toggle('show');
     }
 
     // Carregar configurações salvas ao carregar a página
     document.addEventListener('DOMContentLoaded', function() {
         const savedFontSize = localStorage.getItem('fontSize');
         const savedHighContrast = localStorage.getItem('highContrast');
-        const savedReduceMotion = localStorage.getItem('reduceMotion');
         
         if (savedFontSize) {
             tamanhoFonte = parseInt(savedFontSize);
@@ -612,21 +614,16 @@
         if (savedHighContrast === 'true') {
             document.body.classList.add('alto-contraste');
         }
-
-        if (savedReduceMotion === 'true') {
-            document.body.classList.add('reduce-motion');
-        }
     });
 
     // Fechar menu ao clicar fora
     document.addEventListener('click', function(event) {
-        const menuContainer = document.querySelector('.menu-acessibilidade');
-        const opcoes = document.querySelector('.opcoes-acessibilidade');
+        const toggleButton = document.querySelector('.accessibility-toggle-button');
+        const menu = document.getElementById('accessibilityMenu');
         
-        // Se o clique não foi dentro do menuContainer e as opções estão visíveis, esconda-as
-        // Verifica se o clique não foi no botão principal do menu e nem dentro das opções
-        if (!menuContainer.contains(event.target) && opcoes.classList.contains('apresenta-lista')) {
-            opcoes.classList.remove('apresenta-lista');
+        // Se o clique não foi no botão de toggle e nem dentro do menu, e o menu está visível, esconda-o
+        if (!toggleButton.contains(event.target) && !menu.contains(event.target) && menu.classList.contains('show')) {
+            menu.classList.remove('show');
         }
     });
 </script>
