--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
       <ul>
         <li><a href="#features" tabindex="0">Funcionalidades</a></li>
         <li><a href="#about" tabindex="0">Sobre</a></li>
-        <li><a href="#contact" tabindex="0">Contato</a></li>
+        <li><a href="#contact" tabindex="0"></a></li>
       </ul>
     </nav>
   </header>
